--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1401,7 +1401,7 @@ a.bg-warning:focus {
   background-color: #f7ecb5;
 }
 .bg-danger {
-  background-color: #f2dede;
+  background-color: #1cb0b0;
 }
 a.bg-danger:hover,
 a.bg-danger:focus {
